<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:orientation="vertical"
    tools:context=".addloc">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddloc"
            style="@style/toolbar" />

        <ProgressBar
            android:id="@+id/progressAddloc"
            style="@style/progressbar" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_an_image_images"
                android:textColor="?text_color"
                android:textSize="15sp"
                android:fontFamily="@font/antic"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageAddDir"
                    style="@style/imageV"
                    android:contentDescription="@string/the_image_will_be_displayed_here"/>

                <ImageButton
                    android:id="@+id/addImageAddDir"
                    style="@style/imageBtn"
                    android:contentDescription="@string/add_an_image"
                    android:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameOfPlaceAddDir"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name_of_place"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    style="@style/materialedittext" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:textColor="?text_color"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DescripAddDir"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/classification_of_the_place"
                    app:counterEnabled="true"
                    app:helperText="Example: church, hotel, bank, etc"
                    app:helperTextEnabled="true"
                    app:counterMaxLength="15"
                    style="@style/materialedittext" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="15"
                        android:textColor="?text_color"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geographic_coordinates"
                    android:textColor="?text_color"
                    android:textSize="15sp"
                    android:fontFamily="@font/antic"
                    android:layout_marginBottom="8dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/latAddDir"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/latitude"
                    app:counterEnabled="true"
                    style="@style/materialedittext">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?text_color"
                        android:inputType="numberSigned" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lngAddDir"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/longitude"
                    app:counterEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperText="if longitude is West, the value is negated"
                    style="@style/materialedittext">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?text_color"
                        android:inputType="numberSigned" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddPlace"
                android:text="@string/add_place"
                style="@style/buttonThemes"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>