<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".feedb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/feedbToolbar"
            style="@style/toolbar" />

        <ProgressBar
            android:id="@+id/progressFeedb"
            style="@style/progressbar" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                style="@style/imageViewfeedb"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/feedback_drawable" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/antic"
                    android:text="@string/feedbacktextView"
                    android:textColor="?text_color"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextFeedback"
                    style="@style/materialedittext"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/feedback_issues"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:counterOverflowTextColor="@color/red"
                    app:helperText="Please make it brief">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="215"
                        android:textColor="?text_color" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFeedb"
                style="@style/buttonThemes"
                android:layout_marginTop="20dp"
                android:text="@string/send" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>