<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:id="@+id/adminsignupAct"
    tools:context=".adminSignup">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/adminsignupToolbar"
            style="@style/toolbar" />

        <ProgressBar
            android:id="@+id/progressAdminSignup"
            style="@style/progressbar" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp">

            <ImageView style="@style/imageViewAdmin" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUsernameAdmin"
                style="@style/materialedittext"
                android:layout_marginBottom="10dp"
                android:hint="@string/user_name"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:textColor="?text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etemailAdmin"
                style="@style/materialedittext"
                android:layout_marginBottom="10dp"
                android:hint="@string/e_mail"
                app:helperText="example: youremail@...com  "
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="?text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etpwordAdmin"
                style="@style/materialedittext"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:helperText="Your password should be eight(8) or more characters"
                app:helperTextEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmpwordAdmin"
                style="@style/materialedittext"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                app:counterEnabled="true"
                app:helperText="re-type your password"
                app:helperTextEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?text_color" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccAdmin"
            style="@style/buttonThemes"
            android:text="@string/create_account" />
    </LinearLayout>


</LinearLayout>